--- a/scss/pagelayout.scss
+++ b/scss/pagelayout.scss
@@ -28,6 +28,7 @@ main {
     letter-spacing: 0.28em;
     font-weight: 700;
     text-transform: uppercase;
+    margin-right: 2.5rem;
   }
 
   &__checkbox {
