--- a/scss/main.css
+++ b/scss/main.css
@@ -476,6 +476,7 @@ main {
 .header__nav-list {
   list-style: none;
   margin: 0;
+  padding: 0;
   display: flex;
   gap: 2.4rem;
   align-items: center;
